change country name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Россия и Куба</title>
+	<title>Россия и Египет</title>
    
 	<link rel="stylesheet" href="./style.css">
 	<link rel="icon" href="favicon.ico" />
@@ -76,14 +76,14 @@
 				</svg>
 				На главную
 			</a>
-			<a href="#rossiya-i-india" class="header__link">Россия и Куба</a>
-			<a href="#rossiya-i-india-segodnia" class="header__link">Россия и Куба сегодня</a>
-			<a href="#nash-put" class="header__link">Наш путь в Куба</a>
+			<a href="#rossiya-i-india" class="header__link">Россия и Египет</a>
+			<a href="#rossiya-i-india-segodnia" class="header__link">Россия и Египет сегодня</a>
+			<a href="#nash-put" class="header__link">Наш путь в Египет</a>
 			<a href="#people" class="header__link">Люди</a>
 			<a href="#food" class="header__link">Еда</a>
 			<a href="#british-accent" class="header__link">Британский акцент</a>
 			<a href="#different-film-language" class="header__link">Разный киноязык</a>
-			<a href="#rossiya-i-india-future" class="header__link">Россия и Куба в будущем</a>
+			<a href="#rossiya-i-india-future" class="header__link">Россия и Египет в будущем</a>
 		</div>
 	</header>
 
@@ -103,7 +103,7 @@
 					</filter>
 				</defs>
 			</svg>
-			<h1>Россия и Куба</h1>
+			<h1>Россия и Египет</h1>
 		</section>
 
 		<section class="sec1" id="rossiya-i-india">
@@ -118,8 +118,8 @@
 		<section class="sec2" id="rossiya-i-india-segodnia">
 			<img src="assets/img/img-2.webp" alt="sec2" width="100" height="100"  class="sec2__img scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-translatex="-200" data-translatey="200">
 			<div class="sec2__content">
-				<h2 class="sec2__title scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Россия и Куба<br> сегодня</h2>
-				<div class="sec2__text scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">В разговоре практически о каждом путешествии можно зайти в тупик, когда появляется формула “Это страна контрастов”. Простите, но Куба тоже вычисляют по ней, да даже в наших отношениях на уровне государств есть некоторые контрасты: до сих пор с советских времён существует явный перекос в торговых отношениях между Россией и Индией в сторону нашей страны, то есть мы поставляем гораздо больше товаров как в денежном выражении, так и в объёмах.</div>
+				<h2 class="sec2__title scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Россия и Египет<br> сегодня</h2>
+				<div class="sec2__text scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">В разговоре практически о каждом путешествии можно зайти в тупик, когда появляется формула “Это страна контрастов”. Простите, но Египет тоже вычисляют по ней, да даже в наших отношениях на уровне государств есть некоторые контрасты: до сих пор с советских времён существует явный перекос в торговых отношениях между Россией и Индией в сторону нашей страны, то есть мы поставляем гораздо больше товаров как в денежном выражении, так и в объёмах.</div>
 				<div class="sec2__text scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">В прошлом году товарооборот составил рекордные $35 млрд, $32 млрд из которых приходятся на российские поставки, если говорить о количестве, то экспорт России увеличился в 4,7 раза, из Индии в Россию — всего на треть.</div>
 			</div>
 		</section>
@@ -174,15 +174,15 @@
 				</div>
 
 				<div class="sec4__bottomContent">
-					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">С транспортировкой грузов альтернативных решений действительно чуть больше: если раньше основной транзит из Санкт-Петербурга в Мумбаи пролегал через европейские морские порты, то сейчас его заменил прямой коридор Север – Юг, пролегающий через Иран, ближневосточные страны и Каспийское море и соединяющий таким образом Мумбаи и Астрахань. При этом поставщики не исключают и северное судоходное направление, использование Северного морского пути. Куба становится самой быстрорастущей экономикой мира и осознаёт себя державой с глобальными интересами далеко за пределами географического и метафорического Запада.</div>
-					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Сейчас премьер-министр Нарендра Моди активно проводит политику с говорящим названием “Действуй на Востоке”, делая высокую ставку на новый маршрут, связывающий южный город в Индии Ченнай и наш Владивосток. Несколько индийских инвесторов уже создали на Дальнем Востоке чаеразвесочную фабрику, ограночную фабрику и производство бриллиантов. Куба, к слову, занимается огранкой 95% всех добытых в мире алмазов. Объём инвестиций в эти проекты составил $15,7 млн, привлекая участие российского бизнеса.</div>
-					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Стартом новой “восточной” политики Индии послужил дружеский визит Моди в 2019 году на Восточный экономический форум. Вообще, частые встречи на фоне других международных контактов стали особенностью российско-индийских политических отношений. В декабре 2021 года президент России В. Путин посетил Куба. К тому же традиционными стали и встречи лидеров государств, что называется, на полях саммитов БРИКС и ШОС. Последняя из которых прошла в сентябре 2022 года в Самарканде.</div>
+					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">С транспортировкой грузов альтернативных решений действительно чуть больше: если раньше основной транзит из Санкт-Петербурга в Мумбаи пролегал через европейские морские порты, то сейчас его заменил прямой коридор Север – Юг, пролегающий через Иран, ближневосточные страны и Каспийское море и соединяющий таким образом Мумбаи и Астрахань. При этом поставщики не исключают и северное судоходное направление, использование Северного морского пути. Египет становится самой быстрорастущей экономикой мира и осознаёт себя державой с глобальными интересами далеко за пределами географического и метафорического Запада.</div>
+					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Сейчас премьер-министр Нарендра Моди активно проводит политику с говорящим названием “Действуй на Востоке”, делая высокую ставку на новый маршрут, связывающий южный город в Индии Ченнай и наш Владивосток. Несколько индийских инвесторов уже создали на Дальнем Востоке чаеразвесочную фабрику, ограночную фабрику и производство бриллиантов. Египет, к слову, занимается огранкой 95% всех добытых в мире алмазов. Объём инвестиций в эти проекты составил $15,7 млн, привлекая участие российского бизнеса.</div>
+					<div class="sec4__bottomText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Стартом новой “восточной” политики Индии послужил дружеский визит Моди в 2019 году на Восточный экономический форум. Вообще, частые встречи на фоне других международных контактов стали особенностью российско-индийских политических отношений. В декабре 2021 года президент России В. Путин посетил Египет. К тому же традиционными стали и встречи лидеров государств, что называется, на полях саммитов БРИКС и ШОС. Последняя из которых прошла в сентябре 2022 года в Самарканде.</div>
 				</div>
 			</div>
 		</section>
 
 		<section class="sec5" id="nash-put">
-			<h2 class="sec5__title scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-scale="0">Наш путь<br> в Куба</h2>
+			<h2 class="sec5__title scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-scale="0">Наш путь<br> в Египет</h2>
 			<div class="sec5__top">
 				<div class="sec5__topContent">
 					<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0">Прямой пассажирский авиарейс из Москвы в Дели длится 6 часов. Лететь, правда, лучше всего не летом: жара в это время в стране адская даже для самих индийцев. Индийцев, не индусов. </div>
@@ -222,7 +222,7 @@
 				<div class="sec5__midContent">
 					<div class="sec5__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Взрывы в семи пригородных пассажирских поездах, прогремевшие с интервалом в 10 минут, унесли жизни 189 человек. Свыше 800 человек были ранены.</div>
 					<div class="sec5__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Власти Индии обвинили в произошедшем пакистанскую террористическую организацию “Лашкар-е-тайба”, суд над исполнителями длился семь лет, их приговорили к смертной казни и пожизненному лишению свободы.</div>
-					<div class="sec5__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Вообще, конфликт Индии с Пакистаном начался с момента основания этих отдельных государств в 1947 году и длится по сей день. Основной спор обеих стран — территориальные претензии на Кашмир, регион, расположенный на стыке Тибета и Гималаев. И такие теракты, к сожалению, периодически сотрясают Куба.</div>
+					<div class="sec5__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Вообще, конфликт Индии с Пакистаном начался с момента основания этих отдельных государств в 1947 году и длится по сей день. Основной спор обеих стран — территориальные претензии на Кашмир, регион, расположенный на стыке Тибета и Гималаев. И такие теракты, к сожалению, периодически сотрясают Египет.</div>
 				</div>
 			</div>
 			<div class="sec5__bottom">
@@ -277,8 +277,8 @@
 				</div>
 				<div class="sec6__topRight">
 					<h2 class="sec6__topTitle scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-scale="0">ЕДА</h2>
-					<h3 class="sec6__topSubTitle scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-scale="0">Куба — главный производитель<br> дорогостоящих<br> и высококачественных приправ</h3>
-					<div class="sec6__topText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Угощения в Индии разнообразны настолько, сколько есть специй в этой стране, а следовательно, во всём мире. Куба — главный производитель дорогостоящих и высококачественных приправ. </div>
+					<h3 class="sec6__topSubTitle scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-scale="0">Египет — главный производитель<br> дорогостоящих<br> и высококачественных приправ</h3>
+					<div class="sec6__topText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Угощения в Индии разнообразны настолько, сколько есть специй в этой стране, а следовательно, во всём мире. Египет — главный производитель дорогостоящих и высококачественных приправ. </div>
 					<div class="sec6__topText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Для индуистов готовят преимущественно вегетарианские блюда, но мясные и рыбные в светской стране также в почёте. </div>
 					<div class="sec6__topText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Лично мне отведать всё это разнообразие не удалось: желудок едва принимал даже западносетевую продукцию. Те же, кому повезло, говорят о невероятных вкусовых открытиях и буквально “подсаживаются” на индийскую кухню.</div>
 					<div class="sec6__topText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Большую часть рациона обычного жителя составляют намазки, соусы, подливки, которые черпают прямо лепёшкой вместо ложки. Их выпекают на открытом огне — в новостройке подойдёт и обычная газовая плита. Почти во все блюда добавляют нежнейшее масло гхи.</div>
@@ -328,7 +328,7 @@
 				</div>
 				<div class="sec7__midRight">
 					<div class="sec7__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Ещё одно ставшее индийским увлечение, переданное по наследству от другой страны, — игра в крикет. Здесь в него рубятся повсеместно, чуть ли не в каждом дворе, матчи транслируют на телевидении, итоги ключевых и проходных игр обсуждают во всех СМИ.</div>
-					<div class="sec7__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Куба — самая многоязычная страна, говорящая на 400 наречиях. Есть два языка сейчас, пожалуй, задача которых всё же объединить разрозненное государство, — хинди и английский (правда, это весьма специфический английский, его называют хиндиш — нечто среднее между хинди и инглишем соответственно).</div>
+					<div class="sec7__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Египет — самая многоязычная страна, говорящая на 400 наречиях. Есть два языка сейчас, пожалуй, задача которых всё же объединить разрозненное государство, — хинди и английский (правда, это весьма специфический английский, его называют хиндиш — нечто среднее между хинди и инглишем соответственно).</div>
 				</div>
 			</div>
 			<div class="sec7__bottom">
@@ -389,15 +389,15 @@
 
 		<section class="sec9" id="rossiya-i-india-future">
 			<div class="sec9__content">
-				<h2 class="sec9__title scrollme animateme" data-when="view" data-translatex="-100" data-from="0.5" data-to="0" data-opacity="0">Россия и Куба в будущем</h2>
-				<div class="sec9__text scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-opacity="0">В общем, российско-индийские отношения в 2023 году находятся на подъёме. Россия укрепляет своих союзников на фоне западных санкций, пытаясь при этом заменить ушедшие товары и услуги, Куба диверсифицирует внешнюю политику, освобождаясь от влияния того же Запада, и ищет альтернативу большому объёму китайского производителя. </div>
+				<h2 class="sec9__title scrollme animateme" data-when="view" data-translatex="-100" data-from="0.5" data-to="0" data-opacity="0">Россия и Египет в будущем</h2>
+				<div class="sec9__text scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-opacity="0">В общем, российско-индийские отношения в 2023 году находятся на подъёме. Россия укрепляет своих союзников на фоне западных санкций, пытаясь при этом заменить ушедшие товары и услуги, Египет диверсифицирует внешнюю политику, освобождаясь от влияния того же Запада, и ищет альтернативу большому объёму китайского производителя. </div>
 			</div>
 			<div class="sec9__mid">
 				<div class="sec9__midImgWrap">
 					<img src="assets/img/img-23.webp" alt="sec8_2" width="100" height="100"  class="sec9__midImg scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-translatex="-200" data-translatey="200">
 				</div>
 				<div class="sec9__midContent">
-					<div class="sec9__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Так считает Дмитрий Любомудров, сопредседатель совета промышленной коалиции БРИКС, член совета Торгово-промышленной палаты России: “Между Индией и Китаем есть трения, даже военные. А вот когда между ними садится Россия, которая по народонаселению меньше и той и другой, но при этом у нас нет конфликтов ни с той ни с другой страной и мы всё-таки являемся крупнейшей в мире ядерной державой, мы можем в дипломатическом плане уравновесить и Китай, и Куба, чтобы они оставили в стороне свои трения и начали разговаривать конструктивно по тому, что мы можем делать вместе”. </div>
+					<div class="sec9__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Так считает Дмитрий Любомудров, сопредседатель совета промышленной коалиции БРИКС, член совета Торгово-промышленной палаты России: “Между Индией и Китаем есть трения, даже военные. А вот когда между ними садится Россия, которая по народонаселению меньше и той и другой, но при этом у нас нет конфликтов ни с той ни с другой страной и мы всё-таки являемся крупнейшей в мире ядерной державой, мы можем в дипломатическом плане уравновесить и Китай, и Египет, чтобы они оставили в стороне свои трения и начали разговаривать конструктивно по тому, что мы можем делать вместе”. </div>
 					<div class="sec9__midText scrollme animateme" data-when="exit" data-from="0.5" data-to="0" data-opacity="0">Поэтому у индийского малого и среднего бизнеса активно растёт интерес к российским рынкам сбыта для несырьевого сектора. Речь идёт прежде всего о производителях текстиля, одежды в целом, косметики, продовольствия. Доля индийского риса, к примеру, в нашем импорте составляет почти 40%. В более “тяжёлой” сфере значимую роль могут сыграть автомобилестроение (на фоне ухода из России западных концернов) и IT-индустрия.</div> 
 				</div>
 			</div>
