--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</svg>
 				На главную
 			</a>
-			<a href="#rossiya-i-egypt" class="header__link">Россия и Египет</a>
+			<a href="#rossiya-i-egypt" class="header__link">История отношений</a>
 			<a href="#rossiya-i-egypt-segodnia" class="header__link">Россия и Египет сегодня</a>
 			<a href="#rossiya-i-egypt-future" class="header__link">Россия и Египет в будущем</a>
 			<!--<a href="#nash-put" class="header__link">Наш путь в Египет</a>
