--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@
 				<div class="sec5__mid">
 					<img src="assets/img/img-12.webp" alt="sec5_2" width="100" height="100" class="sec5__midImg scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-translatex="-200" data-translatey="200" style="opacity: 1; transform: translate3d(-198px, 198px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">
 					<div class="sec5__midContent">
-						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">Не таким масштабным и не совсем очевидным направлением сотрудничества являются и религиозные контакты. Так, Русская православная церковь активно сотрудничает с египетской Коптской церковью, в которой свыше 20 миллионов верующих. 
-
-						</div>
+						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">Не таким масштабным и не совсем очевидным направлением сотрудничества являются религиозные контакты. Русская православная церковь активно сотрудничает с египетской Коптской церковью, в которой свыше 20 миллионов верующих. Это взаимодействие помогает укреплять духовные связи и поддерживать религиозное сообщество. </div>
+						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">Такое сотрудничество способствует обмену опытом и знаниями между двумя церквями, поддерживает развитие и сохранение религиозных традиций. Религиозные контакты играют важную роль в укреплении культурных и духовных связей между народами, помогая найти общие ценности и цели. </div>
 						
 					</div>
 				</div>
 				<div class="sec5__bottom">
 					<div class="sec5__bottomContent">
-						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 0.86; transform: translate3d(14px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">По мнению многих экспертов, именно Египет считается, родиной христианского монашества — поэтому особо почитаем среди верующих.</div>
+						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 0.86; transform: translate3d(14px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">По мнению многих экспертов, именно Египет считается родиной христианского монашества. Это делает его особенно почитаемым среди верующих, которые видят в египетских монастырях и святых местах источник духовного вдохновения и наследия.</div>
+						<div class="sec5__topText scrollme animateme" data-when="view" data-translatex="100" data-from="0.5" data-to="0" data-opacity="0" style="opacity: 0.86; transform: translate3d(14px, 0px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">Египетские монастыри, такие как монастырь Святого Антония и монастырь Святого Павла, привлекают паломников со всего мира. Эти места не только являются символами древней веры, но и служат центрами духовного обновления и просвещения.</div>
 					</div>
 					<img src="assets/img/img-13.webp" alt="sec5_2" width="100" height="100" class="sec5__midImg scrollme animateme" data-when="view" data-from="0.5" data-to="0" data-translatex="-200" data-translatey="200">
 
