--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</svg>
 			<h1>Россия и Египет</h1>
 		</section>
-		<section class="py-20 overflow-hidden">
+		<section class="py-20 overflow-hidden" id="rossiya-i-egypt">
 			<div class="container m-auto px-5 lg:px-20">
 				<div class="grid grid-cols-12 gap-10">
 					<div class="flex flex-col gap-5 lg:col-span-6 col-span-12">
@@ -158,7 +158,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="py-20 overflow-hidden bg-black">
+		<section class="py-20 overflow-hidden bg-black" id="rossiya-i-egypt-segodnia">
 			<div class="container m-auto px-5 lg:px-20">
 				<div class="grid grid-cols-12 gap-10">
 					<div class="lg:col-span-7 col-span-12 max-h-full relative scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -229,7 +229,7 @@
 			</div>
 		</section>
 
-		<section class="py-20 overflow-hidden bg-gray-200">
+		<section class="py-20 overflow-hidden bg-gray-200" id="rossiya-i-egypt-future">
 			<div class="container m-auto px-5 lg:px-20">
 				<div class="grid grid-cols-12 gap-10">
 					<div class="lg:col-span-6 col-span-12 max-h-full relative videoBlock scrollme animateme" data-when="view" data-translatey="-100" data-from="0.8" data-to="0" data-opacity="0">
