--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 						</p>
 					</div>
 					<div class="lg:col-span-6 col-span-12 flex flex-col gap-5">
-						<img src="assets/img/img-4.webp" alt=""  class="scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
+						<img src="assets/img/img-4.jpg" alt=""  class="scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							Район Гизы туристический и в то же время очень бедный. Уклад жизни многих египтян здесь может не меняться десятилетиями. Женщины собирают траву для скота с помощью плуга на соседнем поле. А на каждом доме здесь стоят голубятни: голуби — местный деликатес. Но если уж говорить о местной кухне, то веками в Египте также едят и верблюдов. Согласно вере, верблюд считается чистым животным. Зачастую микс из верблюжьего, говяжьего и бараньего мяса на рисовой подложке можно найти в местных кафе. Но верблюжатину подают именно в Гизе — недалеко от пирамид. 
 						</p>
 					</div>
 					<div class="lg:col-span-2 col-span-12">
-						<p class="text-regular text-gray-700 mb-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 mb-5 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							Первые отношения Египта с Россией начались с археологических экспедиций, которые в середине XIX века на свои деньги организовывал легендарный нынче Владимир Голенищев. Но в те годы и вплоть до середины ХХ века Египет был протекторатом Великобритании. Англичане контролировали Суэцкий канал, приносивший в казну огромные деньги. Всё изменилось из-за Второй мировой войны. Дипломатические отношения между странами были установлены уже в 1943 году. А самый активный период начался в 1950-е годы.
 						</p>
 					</div>
@@ -195,13 +195,13 @@
 
 					<div class="lg:col-span-6 col-span-12 flex flex-col gap-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="w-full" src="assets/img/img-10.webp" alt="">
-						<p class="text-regular text-white">
+						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							Египет, в свою очередь, поставляет в Россию тропические фрукты, изделия из кожи, различные специи и знаменитые египетские ковры, которые давно стали отличительной частью и визитной карточкой арабской культуры. А самые изысканные ковры делаются вручную по полгода, и одно полотно стоит до миллиона рублей. 
 						</p>
 					</div>
 					<div class="lg:col-span-6 col-span-12 flex flex-col gap-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="w-full" src="assets/img/img-11.webp" alt="">
-						<p class="text-regular text-white">
+						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							Кроме того, Россия заходит и в торговые сети Египта. Пока, правда, осторожно. Российский экспортный центр поддерживает 446 российских компаний, которые хотят завоевать рынок египетских соцсетей. Российские макароны, чай, сладости и масло можно найти на местных прилавках. В Каире работают пекарни, производящие русские медовики. А взыскательные египтяне пытаются открыть для себя вкус гречки — пока с переменным успехом. Тем не менее российские продукты представлены в 11 торгово-розничных сетях и онлайн.
 						</p>
 					</div>
