--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		</section>
 		<section class="py-20 overflow-hidden" id="rossiya-i-egypt">
 			<div class="container m-auto px-5 lg:px-20">
-				<div class="grid grid-cols-12 gap-10">
+				<div class="flex flex-col md:grid md:grid-cols-12 gap-10">
 					<div class="flex flex-col gap-5 lg:col-span-6 col-span-12">
 						<h1 class="lg:text-7xl md:text-3xl xs:text-3xl font-bold scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">ИСТОРИЯ ОТНОШЕНИЙ РОССИИ И ЕГИПТА</h1>
 						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -113,7 +113,7 @@
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-1.webp" alt="">
 					</div>
 					<div class="lg:col-span-9 col-span-12 relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
-						<img class="absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-2.webp" alt="">
+						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-2.webp" alt="">
 					</div>
 					<div class="lg:col-span-3 col-span-12">
 						<p class="text-regular text-gray-700 mb-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
@@ -141,7 +141,7 @@
 						</p>
 					</div>
 					<div class="lg:col-span-10 col-span-12 relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
-						<img class="absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-5.webp" alt="">
+						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-5.webp" alt="">
 					</div>
 					<div class="lg:col-span-6 col-span-12 flex flex-col gap-5">
 						<img src="assets/img/img-6.webp" alt="" class="scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
@@ -160,9 +160,9 @@
 		</section>
 		<section class="py-20 overflow-hidden bg-black" id="rossiya-i-egypt-segodnia">
 			<div class="container m-auto px-5 lg:px-20">
-				<div class="grid grid-cols-12 gap-10">
+				<div class="flex flex-col md:grid md:grid-cols-12 gap-10">
 					<div class="lg:col-span-7 col-span-12 max-h-full relative scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
-						<img class="absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-8.webp" alt="">
+						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-8.webp" alt="">
 					</div>
 					<div class="lg:col-span-5 col-span-12 flex flex-col gap-5">
 						<h2 class="lg:text-7xl md:text-3xl xs:text-3xl font-bold text-white scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
@@ -212,10 +212,10 @@
 						</p>
 					</div>
 					<div class="lg:col-span-4 col-span-12 max-h-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
-						<img class="absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-12.webp" alt="">
+						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-12.webp" alt="">
 					</div>
 					<div class="lg:col-span-4 col-span-12 max-h-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
-						<img class="absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-13.webp" alt="">
+						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-13.webp" alt="">
 					</div>
 					<div class="lg:col-span-2 col-span-12 flex flex-col gap-5">
 						<p class="text-regular text-white scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
@@ -231,7 +231,7 @@
 
 		<section class="py-20 overflow-hidden bg-gray-200" id="rossiya-i-egypt-future">
 			<div class="container m-auto px-5 lg:px-20">
-				<div class="grid grid-cols-12 gap-10">
+				<div class="flex flex-col md:grid md:grid-cols-12 gap-10">
 					<div class="lg:col-span-6 col-span-12 max-h-full relative videoBlock scrollme animateme" data-when="view" data-translatey="-100" data-from="0.8" data-to="0" data-opacity="0">
 						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" poster="assets/img/img-14.webp">
 							<source src="assets/videos/video_2.mp4" type="video/mp4">
