--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 			<div class="lg:container m-auto px-5 lg:px-20">
 				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full max-h-full relative videoBlock scrollme animateme" data-when="view" data-translatey="-100" data-from="0.8" data-to="0" data-opacity="0">
-						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" poster="assets/img/img-14.webp">
+						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center">
 							<source src="assets/videos/video_2.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
