--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<div class="lg:col-span-9 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-2.webp" alt="">
 					</div>
-					<div class="lg:col-span-3 md:col-span-3 col-span-full">
+					<div class="lg:col-span-3 md:col-span-3 col-span-full md:order-none order-first">
 						<p class="text-regular text-gray-700 mb-5 scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 							Историки спорят о датировке — но чаще всего сходятся в том, что история древнеегипетской цивилизации начинается за 3000 лет до нашей эры. То есть на берегах Нила он существует 5 тысячелетий. Поспорить в долгожительстве с Египтом может разве что Китай. 
 						</p>
@@ -129,13 +129,13 @@
 				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-3.webp" alt="" class="scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							За тысячи лет истории поменялось многое: культурный и этнический состав, вера, язык, государственное устройство и место в современном мире. Не менялись только пирамиды, которые, как и прежде, стоят недалеко от Каира. С каждым годом, однако, как жалуются египтяне, их всё больше и больше теснят новостройки. А застроенные отелями подступы к сфинксу и вовсе нужно раскопать, ведь там наверняка отыщутся новые гробницы, мумии и обелиски. Пирамиды Гизы стоят на окраине египетской столицы, и поселиться рядом с ними — вовсе не то же самое, что снять номер с видом на Красную площадь в Москве.
 						</p>
 					</div>
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-4.jpg" alt=""  class="scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							Район Гизы туристический и в то же время очень бедный. Уклад жизни многих египтян здесь может не меняться десятилетиями. Женщины собирают траву для скота с помощью плуга на соседнем поле. А на каждом доме здесь стоят голубятни: голуби — местный деликатес. Но если уж говорить о местной кухне, то веками в Египте также едят и верблюдов. Согласно вере, верблюд считается чистым животным. Зачастую микс из верблюжьего, говяжьего и бараньего мяса на рисовой подложке можно найти в местных кафе. Но верблюжатину подают именно в Гизе — недалеко от пирамид. 
 						</p>
 					</div>
@@ -150,16 +150,16 @@
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-5.webp" alt="">
 					</div>
 				</div>
-				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10 mb-10">
+				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10">
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-6.webp" alt="" class="scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="-100" data-from="0.8" data-to="0" data-opacity="0">
 							В 1953 году Египет выступил за окончательную независимость от Британии и провозгласил республику. Провозглашенное в 1922 году королевство Египет - по факту был марионеткой в руках англичан. В 1954 году к власти приходит второй президент Египта Гамаль Абдель Насер. В 1954 году Египет  выводит британских военных из страны и в 1956 году решается на невиданный шаг — национализирует Суэцкий канал. Это вызвало гнев Лондона — англичане пригрозили Египту войной и даже начали боевые действия. Но вмешался Советский Союз и пригрозил уже Лондону — кризис сошёл на нет. Период правления Насера был очень плодотворным в отношениях России и Египта. Советские специалисты построили на Ниле Асуанскую ГЭС, провели индустриализацию страны. СССР начал поставку в Египет советского вооружения. Египетские студенты приехали учиться в советские вузы.
 						</p>
 					</div>
 					<div class="lg:col-span-6 md:col-span-3 col-span-full flex flex-col gap-5">
 						<img src="assets/img/img-7.webp" alt=""  class="scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
-						<p class="text-regular text-gray-700 scrollme animateme" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
+						<p class="text-regular text-gray-700 scrollme animateme md:order-none order-first" data-when="view" data-translatex="100" data-from="0.8" data-to="0" data-opacity="0">
 							После внезапной смерти Насера следующий президент Анвар Саддат поддерживал США. После его убийства террористами к власти в 1981 году пришёл Хосни Мубарак, который правил страной вплоть до «арабской весны», когда его свергли в 2011 году. Он, как и нынешний президент страны Абдул-Фаттах ас-Сиси, придерживается дружеских отношений с Россией.
 						</p>
 					</div>
@@ -193,7 +193,7 @@
 					</div>
 
 					<div class="lg:col-span-10 md:col-span-3 col-span-full max-h-full relative videoBlock scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
-						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" poster="assets/img/img-9.webp">
+						<video class="lg:absolute top-0 left-0 w-full h-full object-cover object-center">
 							<source src="assets/videos/video_1.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
@@ -274,7 +274,7 @@
 							Из Египта Россия импортирует прежде всего продукцию агропромышленного комплекса. 
 						</p>
 					</div>
-					<div class="lg:col-span-4 md:col-span-3 col-span-full relative videoBlock scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+					<div class="lg:col-span-4 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-15.webp" alt="">
 					</div>
 
@@ -305,7 +305,7 @@
 					</div>
 				</div>
 				<div class="grid lg:grid-cols-12 md:grid-cols-6 grid-cols-1 gap-10">
-					<div class="lg:col-span-8 md:col-span-3 col-span-full relative videoBlock scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
+					<div class="lg:col-span-8 md:col-span-3 col-span-full relative scrollme animateme" data-when="view" data-translatey="100" data-from="0.8" data-to="0" data-opacity="0">
 						<img class="lg:absolute top-0 left-0 w-full h-full object-cover object-center" src="assets/img/img-19.webp" alt="">
 					</div>
 					<div class="lg:col-span-4 md:col-span-3 col-span-full flex flex-col gap-5">
